Changes to be committed: #       deleted:    Aboutme.html #       modified:   Contact.html #       new file:   NIDHI.jpg #       deleted:    Nidhi.png.jpg                                                                                         #        deleted:    Nidhika.jpg                                                                                           #      deleted:    Project.html #       modified:   Resume.pdf #       modified:   index.htm

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ header img:hover {
       max-width: 1000px;
       margin: auto;
     }
-    .about, .projects, .contact {
+    contact {
       margin-bottom: 60px;
     }
     h2 {
@@ -63,7 +63,7 @@ header img:hover {
       margin-bottom: 20px;
       color: #001f3f;
     }
-    .projects .card {
+    card {
       background: #f0f8ff;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -142,12 +142,10 @@ nav a.active::after {
 <body>
   <header>
     <h1>Nidhika Gupta</h1>
-      <img src="Nidhika.jpg" alt="Profile Picture">
+      <img src="NIDHI.jpg" alt="Profile Picture">
    
       <nav>
   <a href="index.html" class="active">Home</a>
-  <a href="Aboutme.html">About</a>
-  <a href="Project.html">Projects</a>
   <a href="Contact.html">Contact</a>
   <a class="resume-button" href="resume.pdf" download>Download Resume</a>
 </nav>
@@ -155,18 +153,11 @@ nav a.active::after {
   </header>
 
   <section id="home" class="home">
-    <h2>Welcome to My Portfolio</h2>
-    <p>I'm a web developer passionate about building beautiful, responsive websites using modern technologies like HTML, CSS, and JavaScript.</p>
-  </section>
+    <h2>Hi, I'm Nidhika</h2>
+    <p>I am a third-year IT student and passionate web developer focused on full stack development. I love building clean, responsive, and user-friendly websites that provide smooth digital experiences. Skilled in HTML, CSS, and JavaScript, I’m continuously exploring modern tools like React to enhance my projects. Beyond academics, I actively learn through tutorials, coding challenges, and collaborative projects. I aim to create meaningful, functional, and impactful web experiences and am always eager to grow, contribute, and connect with like-minded developers.
 
-  <section class="contact">
-    <h2>Contact Me</h2>
-    <form id="contact-form">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+Let's connect if you are looking for someone creative, driven, and always eager to learn more!
+</p>
   </section>
 
   <footer>
