--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact</title>
+  <title>Nidhika.com</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -24,6 +24,24 @@
     }
     header h1 {
       font-size: 2.5rem;
+    }
+    .contact form {
+      display: flex;
+      flex-direction: column;
+    }
+    .contact input, .contact textarea {
+      margin-bottom: 15px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    .contact button {
+      padding: 10px;
+      background: #001f3f;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
     }
     nav {
       margin-top: 10px;
@@ -105,23 +123,48 @@ nav a.active::after {
     <h1>Contact</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="Aboutme.html">About</a>
-      <a href="Project.html">Projects</a>
       <a href="Contact.html" class="active">Contact</a>
       <a class="resume-button" href="resume.pdf" download style="background-color: #001f3f; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold;">Download Resume</a>
     </nav>
+
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+/>
   </header>
 
-  <section>
-    <h2>Get in Touch</h2><br>
-    <p>Email: <a href="mailto:nidhikagupta@gmail.com">nidhikagupta@gmail.com</a></p><br>
-    <p>Social Media:</p><br>
-    <ul>
-      <li><a style="color: navy;" href="https://www.linkedin.com/in/nidhika-gupta-813a482aa/" target="_blank">LinkedIn_Nidhika</a></li><br>
-      <li><a style="color: navy;" href="https://github.com/LUNIX84" target="_blank">GitHub_Nidhika</a></li><br>
-      <li><a style="color: navy;" href="https://www.instagram.com/nidhika_47/" target="_blank">Instagram_Nidhika</a></li><br>
-    </ul>
+  <section class="contact">
+    <h2>Contact Me</h2>
+    <form id="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
   </section>
+
+  <section>
+  <p>Social Media:</p><br>
+  <ul>
+    <li>
+      <a href="https://www.linkedin.com/in/nidhika-gupta-813a482aa/" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" width="24" alt="LinkedIn"> LinkedIn
+      </a>
+    </li><br>
+    <li>
+      <a href="https://github.com/LUNIX84" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" width="24" alt="GitHub"> GitHub
+      </a>
+    </li><br>
+    <li>
+      <a href="https://www.instagram.com/nidhika_47/" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" width="24" alt="Instagram"> Instagram
+      </a>
+    </li><br>
+  </ul>
+</section>
+
+
 
   <footer>
     <p>&copy; 2025 Nidhika Gupta | Portfolio Website</p>
